# qabot

./: .gitignore  mypy.ini  pyproject.toml
qa/: db.sqlite3  manage.py
qa/.chroma/index/: id_to_uuid_755beb11-9b11-410c-b877-609b2b2ddb39.pkl  index_metadata_755beb11-9b11-410c-b877-609b2b2ddb39.pkl  uuid_to_id_755beb11-9b11-410c-b877-609b2b2ddb39.pkl
qa/db/: chroma-collections.parquet  chroma-embeddings.parquet
qa/db/index/: id_to_uuid_c4703be5-4dc1-4bd8-8b82-66cc8fe51be4.pkl  index_metadata_c4703be5-4dc1-4bd8-8b82-66cc8fe51be4.pkl  uuid_to_id_c4703be5-4dc1-4bd8-8b82-66cc8fe51be4.pkl
qa/qa/: base.py  settings.py  urls.py
qa/qa/backend/: auth0_backend.py
qa/qa/middleware/: auth0_middleware.py
qa/qabot/: api.py  apps.py  models.py
qa/qabot/migrations/: 0001_initial.py  0002_rename_data_document_file_and_more.py  0003_alter_chathistory_sender_alter_document_owner_and_more.py  0004_alter_chatmessage_chat_history.py
qa/qabot/serializers/: chat_history.py  chat_message.py  document.py  user.py
qa/qabot/utils/: load_docs.py  load_docs_as_vector.py
tests/: test_qabot.py
