[tool.poetry]
name = "qabot"
version = "0.1.0"
description = ""
authors = ["Ajit Singh <ajit.singh@uk.clara.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
